# kittynode

./: .biomeignore  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  _typos.toml  biome.json  biome.jsonc  codecov.yml  dist-workspace.toml  flake.nix  justfile  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/mayushii-commit/: action.yml
.github/actions/setup-deposit-cli/: action.yml
.github/workflows/: check-links.yaml  check-links.yml  check-typos.yaml  check-typos.yml  ci-javascript.yaml  ci-javascript.yml  ci-rust.yaml  ci-rust.yml  kittynode-cli--release.yml  mayushii-commit-test.yaml  release-app.yaml  release-app.yml  release-docs.yaml  release-gui.yaml  update-release-json.yml  update-release-manifests.yml  update-website-release-json.yaml  update-website-release-json.yml
crates/cli/: Cargo.toml
crates/cli/src/: capability.rs  config.rs  container.rs  docker.rs  main.rs  package.rs  server.rs  system.rs  update.rs  update_checker.rs  validator.rs
crates/cli/src/commands/: delete_package.rs  install_package.rs  mod.rs
crates/cli/src/commands/validator/: mod.rs
crates/cli/src/tui/: mod.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  daemon.rs  docker.rs  ethereum.rs  lib.rs  node.rs  packages.rs  paths.rs  system.rs  validator.rs
crates/core/src/api/: mod.rs  types.rs  validator.rs
crates/core/src/application/: add_capability.rs  config.rs  delete_kittynode.rs  delete_package.rs  get_config.rs  get_container_logs.rs  get_installed_packages.rs  get_operational_state.rs  get_package_catalog.rs  get_packages.rs  init_kittynode.rs  install_package.rs  mod.rs  remove_capability.rs  server.rs  set_auto_start_docker.rs  start_docker_if_needed.rs
crates/core/src/application/validator/: deposit.rs  keygen.rs  mod.rs
crates/core/src/domain/: mod.rs  operational_state.rs  package.rs  server.rs  system_info.rs
crates/core/src/ethereum/: containers.rs  ephemery.rs  settings.rs
crates/core/src/infra/: config.rs  docker.rs  ephemery.rs  mod.rs  server.rs
crates/core/src/validator/: input_validation.rs  keygen.rs
crates/core/tests/: api_config.rs
crates/core/tests/fixtures/ethstaker/: deposit_data.json
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/tests/: routes.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  main.rs
docs/: astro.config.mjs  astro.config.ts  package.json  wrangler.jsonc
docs/public/: CNAME
docs/src/components/: DownloadSection.astro
docs/src/components/overrides/: Footer.astro  SiteTitle.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/development/: development-guide.mdx
docs/src/content/docs/guides/: build-from-source.mdx  install-docker.mdx  operate-ethereum.mdx  run-ethereum.mdx  run-remotely.mdx  set-up-validator.mdx  tailscale.mdx
docs/src/content/docs/learn/: architecture.mdx
docs/src/content/docs/reference/: architecture.mdx  build-from-source.mdx
docs/src/content/docs/start-here/: getting-started.mdx
kittynode-com/: package.json  wrangler.jsonc
kittynode-com/src/lib/: app-release.json  cli-release.json  utils.ts
kittynode-com/src/lib/components/ui/button/: button.svelte
kittynode-com/src/lib/components/ui/code/: code-copy-button.svelte  code-overflow.svelte  code.svelte  code.svelte.ts  shiki.ts
kittynode-com/src/lib/components/ui/copy-button/: copy-button.svelte
kittynode-com/src/lib/components/ui/tabs/: tabs-list.svelte  tabs-trigger.svelte
kittynode-com/src/lib/hooks/: use-clipboard.svelte.ts
kittynode-com/src/routes/: +layout.svelte  +page.svelte
kittynode-com/src/routes/download/: +page.svelte
kittynode-com/src/routes/ps1/: +page.server.ts
kittynode-com/src/routes/sh/: +page.server.ts
kittynode-com/static/: kittynode.eth.txt
kittynode-docs/: astro.config.ts  package.json  wrangler.jsonc
kittynode-docs/src/components/overrides/: Footer.astro  SiteTitle.astro
kittynode-docs/src/content/docs/guides/: run-ethereum.mdx  set-up-docker.mdx  set-up-validator.mdx
kittynode-docs/src/content/docs/reference/: architecture.mdx  build-from-source.mdx
kittynode-docs/src/styles/: custom.css
validator-keys/: deposit_data-1760047870.json  deposit_data-1760048847.json  deposit_data-1760062292.json  keystore-0000-bf8c3592-1deb-46f2-8138-db52307ab16f.json  keystore-0000-f5563449-4a92-4dd4-a64a-e866467b20a6.json  keystore-m_12381_3600_0_0_0-1760062292.json
website/: jsrepo.json  package.json  wrangler.jsonc
website/src/: app.css  app.html
website/src/lib/: app-release.json  cli-release.json  release.json  utils.ts
website/src/lib/components/icons/: Linux.svelte  Windows.svelte
website/src/lib/components/ui/button/: button.svelte
website/src/lib/components/ui/code/: code-copy-button.svelte  code-overflow.svelte  code.svelte  code.svelte.ts  index.ts  types.ts
website/src/lib/components/ui/collapsible/: collapsible-content.svelte  collapsible-trigger.svelte  collapsible.svelte
website/src/lib/components/ui/copy-button/: copy-button.svelte  types.ts
website/src/lib/components/ui/tabs/: tabs-trigger.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/download/: +page.svelte
website/src/routes/ps1/: +page.server.ts
website/src/routes/store/: +page.svelte
website/static/: robots.txt
