[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/web",
]
resolver = "2"

[workspace.package]
edition = "2024"
description = "Control center for world computer operators."
homepage = "https://kittynode.com"
readme = "README.md"
repository = "https://github.com/futurekittylabs/kittynode"
license = "MIT"
publish = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
