[workspace]
members = [
  "crates/cli",
  "crates/core",
  "crates/web",
]
resolver = "2"

[workspace.package]
edition = "2024"
description = "Control center for world computer operators."
homepage = "https://kittynode.com"
readme = "README.md"
repository = "https://github.com/futurekittylabs/kittynode"
license = "MIT"
publish = false

[patch.crates-io]
num-bigint-dig = { git = "https://github.com/dignifiedquire/num-bigint", tag = "v0.8.6" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
