[package]
name = "kittynode-cli"
version = "0.80.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "kittynode"
path = "src/main.rs"

[package.metadata.dist]
formula = "kittynode"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
eyre = { version = "0.6.12", default-features = false, features = [
  "auto-install",
  "track-caller",
] }
kittynode-core = { version = "0.65.0", path = "../core" }
kittynode-server = { version = "0.62.0", path = "../server" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "fs", "time"] }
tokio-stream = "0.1.18"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
dialoguer = { version = "0.12.0", default-features = false, features = ["editor", "password"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zeroize = "1.8"
bip39 = { package = "tiny-bip39", version = "2" }
arboard = "3"
bollard = "0.19.4"
dunce = "1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
