[package]
name = "kittynode-core"
version = "0.65.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy-primitives = "1"
bip32 = { version = "0.5.3", default-features = false, features = ["bip39", "secp256k1"] }
bip39 = { package = "tiny-bip39", version = "2" }
bls = { git = "https://github.com/futurekittylabs/lighthouse", tag = "v8.1.3", package = "bls" }
bollard = "0.19.4"
eth2_key_derivation = { git = "https://github.com/futurekittylabs/lighthouse", tag = "v8.1.3", package = "eth2_key_derivation" }
eth2_keystore = { git = "https://github.com/futurekittylabs/lighthouse", tag = "v8.1.3", package = "eth2_keystore" }
eyre = { version = "0.6.12", default-features = false, features = [
  "auto-install",
  "track-caller",
] }
hex = "0.4.3"
home = "0.5.12"
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
sysinfo = "0.38.4"
tempfile = "3.27.0"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
tar = "0.4.45"
ureq = { version = "2.12.1", features = ["json", "tls"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
tracing = "0.1.44"
url = "2.5.8"
zeroize = "1.8"
dunce = "1"

[dev-dependencies]
tokio = { version = "1.51.1", features = ["macros", "rt"] }
