[package]
name = "kittynode-server"
version = "0.62.0"
edition.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
kittynode-core = { version = "0.65.0", path = "../core" }
tracing-subscriber = "0.3.23"
eyre = { version = "0.6.12", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tower = "0.5.3"
serde_json = "1.0.149"
tempfile = "3.27.0"
